<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:orderInCategory="200"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_baseline_language_24"
        android:orderInCategory="200"
        android:title="@string/language"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_alarm"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:orderInCategory="200"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />
</menu>