<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.UserDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="115dp"
                    android:layout_height="115dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_user"
                    android:contentDescription="@string/app_name"
                    android:transitionName="image"
                    tools:targetApi="lollipop" />

                <TextView
                    android:id="@+id/txt_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/user"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/txt_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/bio_data"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp"
                    tools:ignore="HardcodedText" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="20dp"
                    app:cardCornerRadius="9dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginBottom="2dp"
                                app:srcCompat="@drawable/ic_follower"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_follower"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/follower_placeholder"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="21dp"
                                android:layout_height="21dp"
                                android:layout_marginBottom="2dp"
                                app:srcCompat="@drawable/ic_follow"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_following"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/following_placeholder"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginBottom="2dp"
                                app:srcCompat="@drawable/ic_repository"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Repository"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                tools:ignore="HardcodedText" />

                            <TextView
                                android:id="@+id/txt_repo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="100"
                                android:textColor="@color/colorBlack"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="HardcodedText" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_layout_selector"
            app:tabIndicatorColor="@color/colorWhite"
            app:tabSelectedTextColor="@color/colorPrimary"
            app:tabTextColor="@color/colorWhite" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fav_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_baseline_favorite_border_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>